--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,6 @@ p {
 }
 
 .logo {
-  /* margin-bottom: 20px; */
-
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -110,6 +108,11 @@ ul {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
+}
+
+.current {
+  border-bottom: 4px solid var(--accent-color) ;
+  border-radius: 2px;
 }
 
 /* site-contact */
@@ -589,6 +592,44 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+}
+
+.portfolio-thumb {
+  position: relative;
+}
+
+.portfolio-thumb::before {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+}
+
+.portfolio-thumb:hover .card-text {
+  opacity: 1;
+}
+
+.portfolio-thumb:hover::before {
+  opacity: 1;
+}
+
+.card-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 322px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--primary-white-color);
+
+  opacity: 0;
+
 }
 
 .element .name {
