current::after -1px

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ ul {
 .site-nav .link.current::after {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   content: '';
   display: block;
   width: 100%;
